// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interactions creates a SERIES_START interaction when completing a series item 1`] = `
Array [
  Array [
    "/Apollos/GetInteractionsByForeignKeys?keys=UniversalContentItem%3A559b23fd0aa90e81b1c023e72e230fa1&%24filter=%28%28Operation%20eq%20%27SERIES_START%27%29%29%20and%20%28PersonAliasId%20eq%20456%29",
    Object {},
    Object {},
  ],
]
`;

exports[`Interactions creates a SERIES_START interaction when completing a series item 2`] = `
Array [
  Array [
    Object {
      "action": "SERIES_START",
      "additional": false,
      "nodeId": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
    },
  ],
]
`;

exports[`Interactions creates a new content item interaction 1`] = `
Object {
  "id": 1,
}
`;

exports[`Interactions creates a new content item interaction 2`] = `
Array [
  Array [
    "/Interactions/1",
  ],
]
`;

exports[`Interactions creates a new content item interaction 3`] = `
Array [
  Array [
    "/Interactions",
    Object {
      "InteractionComponentId": 789,
      "InteractionData": "apolloschurch://Interactions/ContentSingle?itemId=UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
      "InteractionSummary": "Like - Super Cool Content",
      "Operation": "Like",
      "PersonAliasId": 456,
    },
  ],
]
`;

exports[`Interactions creates a new interaction from a content item 1`] = `
Object {
  "nodeId": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
  "success": true,
}
`;

exports[`Interactions creates a new interaction from a content item 2`] = `Array []`;

exports[`Interactions creates a new interaction from a content item 3`] = `
Array [
  Array [
    "/Interactions",
    Object {
      "ForeignKey": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
      "InteractionComponentId": 321,
      "InteractionSummary": "VIEW",
      "Operation": "VIEW",
      "PersonAliasId": 456,
    },
  ],
]
`;

exports[`Interactions creates additional interactions from a content item 1`] = `
Array [
  Array [
    Object {
      "__type": "UniversalContentItem",
      "action": "COMPLETE",
      "id": "1",
    },
  ],
]
`;

exports[`Interactions does not create a SERIES_START interaction when completing a series item when you have completed other items  1`] = `
Array [
  Array [
    "/Apollos/GetInteractionsByForeignKeys?keys=UniversalContentItem%3A559b23fd0aa90e81b1c023e72e230fa1&%24filter=%28%28Operation%20eq%20%27SERIES_START%27%29%29%20and%20%28PersonAliasId%20eq%20456%29",
    Object {},
    Object {},
  ],
]
`;

exports[`Interactions does not create a SERIES_START interaction when completing a series item when you have completed other items  2`] = `Array []`;

exports[`Interactions fetches interactions for a logged in user and nodeId 1`] = `
Array [
  Array [
    "/Apollos/GetInteractionsByForeignKeys?keys=UniversalContentItem%3A965b6e6d7046a885bea4e300b5c0400d&%24filter=PersonAliasId%20eq%20456",
    Object {},
    Object {},
  ],
]
`;

exports[`Interactions fetches interactions for a logged in user, nodeId, and actions 1`] = `
Array [
  Array [
    "/Apollos/GetInteractionsByForeignKeys?keys=UniversalContentItem%3A559b23fd0aa90e81b1c023e72e230fa1&%24filter=%28%28Operation%20eq%20%27READ%27%29%20or%20%28Operation%20eq%20%27COMPLETE%27%29%29%20and%20%28PersonAliasId%20eq%20456%29",
    Object {},
    Object {},
  ],
]
`;

exports[`Interactions fetches interactions for a logged in user, nodeId, and actions 2`] = `
Array [
  Array [
    "/Apollos/GetInteractionsByForeignKeys?keys=UniversalContentItem%3A559b23fd0aa90e81b1c023e72e230fa1&%24filter=%28%28Operation%20eq%20%27READ%27%29%20or%20%28Operation%20eq%20%27COMPLETE%27%29%29%20and%20%28PersonAliasId%20eq%20456%29",
    Object {},
    Object {},
  ],
]
`;

exports[`Interactions fetches interactions for multiple nodeIds 1`] = `
Array [
  Array [
    "/Apollos/GetInteractionsByForeignKeys?keys=UniversalContentItem%3A559b23fd0aa90e81b1c023e72e230fa1%2CUniversalContentItem%3A965b6e6d7046a885bea4e300b5c0400d%2CUniversalContentItem%3A4f68015ba18662a7409d1219a4ce013e&%24filter=%28%28Operation%20eq%20%27READ%27%29%20or%20%28Operation%20eq%20%27COMPLETE%27%29%29%20and%20%28PersonAliasId%20eq%20456%29",
    Object {},
    Object {},
  ],
]
`;

exports[`Interactions fetches interactions without throwing an error for a logged out user 1`] = `Array []`;

exports[`Interactions it calls different endpoints if USE_PLUGIN is false 1`] = `
Array [
  Array [
    "Interactions?%24filter=%28%28Operation%20eq%20%27READ%27%29%20or%20%28Operation%20eq%20%27COMPLETE%27%29%29%20and%20%28%28ForeignKey%20eq%20%27UniversalContentItem%3A559b23fd0aa90e81b1c023e72e230fa1%27%29%20and%20%28PersonAliasId%20eq%20456%29%29",
    Object {},
    Object {},
  ],
]
`;

exports[`Interactions returns a success: false from an invalid nodeId 1`] = `
Object {
  "success": false,
}
`;

exports[`Interactions returns a success: false from an invalid nodeId 2`] = `Array []`;

exports[`Interactions returns a success: false from an invalid nodeId 3`] = `Array []`;

exports[`Interactions use a lookup map to find additional interactions to fire 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "__type": "UniversalContentItem",
        "action": "COMPLETE",
        "id": 1,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
